--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -10,5 +10,9 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "InfusyncDb"
   },
+  "Token": {
+    "Key": "1234567890ABCDEF",
+    "Issuer": "https://localhost:3620"
+  },
   "AllowedHosts": "*"
 }
